Fix yaml markdown tag

--- a/assignment17.ipynb
+++ b/assignment17.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Use the code you wrote in [Assignment 15](https://github.com/PGE323M-Fall2018/assignment15) and add additional functionality to incorporate the wells.  The wells section of the inputs will look something like:\n",
     "\n",
-    "```yml\n",
+    "```yaml\n",
     "'wells':\n",
     "    'rate':\n",
     "        'locations': \n",
